--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
+certifi==2020.6.20
+click==7.1.2
+coverage==5.3
 importlib-metadata==2.0.0
+joblib==0.17.0
 jsonpickle==1.4.1
+nltk==3.5
 passlib==1.7.4
+regex==2020.10.28
 Send2Trash==1.5.0
+textblob==0.15.3
+tqdm==4.51.0
 zipp==3.4.0
+mypy==0.790
